Restructure: same layout as v1 repo (assets, blocks, docs, snippets at root). Add LICENSE, CHANGELOG, GETTING_STARTED, START_HERE, .gitattributes. README: same style as v1 with placeholders for screenshots/video, keep Mermaid architecture diagram.

--- a/.theme-check.yml
+++ b/.theme-check.yml
@@ -1,4 +1,4 @@
-# Theme Check for the bundle-offers v2 package (theme-files only).
+# Theme Check for the bundle-offers v2 package.
 # These files are meant to be copied into a client theme; many variables
 # are passed at render time and snippets are referenced by the block in the theme.
 extends: theme-check:recommended
